update second phase v1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
     <button (click)="translate.use('en')">click</button><br>
     <button (click)="translate.use('th')">กด</button>
   </div> -->
+  
 <app-canvas-menu></app-canvas-menu>
-<router-outlet (activate)="onActivate($event)" ></router-outlet>
+<router-outlet (activate)="onActivate($event)" ><div class="se-pre-con"></div></router-outlet>
+<div id="exit-canvas" class=""></div>
 <!-- <app-footer></app-footer> -->
