--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,7 @@
 <div class="footer">
+        <div class="backtotop" (click)="uptotop()">
+                <i class="sprite sprite-p_back_to_top totop"></i>
+            </div>
     <div class="footer_sub">
     <div class="container">
         <div class="row">
