--- a/src/app/report/receipt-history/receipt-history.component.html
+++ b/src/app/report/receipt-history/receipt-history.component.html
@@ -138,7 +138,7 @@
             </div>
             <div class="col-md-6">
               <div class="input-wrapper">
-                <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
+                <input class=" textinput dateinput bg-gray" [(ngModel)]="model.startDate" ngbDatepicker #d1="ngbDatepicker" id="startDate" placeholder="วว/ดด/ปปปป" name="startDate" type="text" (click)="d1.toggle()">
               </div>
             </div>
             <div class="col-md-4">
@@ -146,7 +146,7 @@
             </div>
             <div class="col-md-6">
               <div class="input-wrapper">
-                <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
+                <input class=" textinput dateinput bg-gray" [(ngModel)]="model.endDate" ngbDatepicker #d2="ngbDatepicker" id="endDate" placeholder="วว/ดด/ปปปป" name="endDate" type="text" (click)="d2.toggle()">
               </div>
             </div>
   
@@ -264,7 +264,7 @@
               336,452.85
             </td>
             <td class="txt-right">
-              336,452.85
+              24,111,336,452.85
             </td>
             <td class="txt-right">
               15/03/2557
