--- a/src/assets/Content/default/sass/_reset.scss
+++ b/src/assets/Content/default/sass/_reset.scss
@@ -8,6 +8,7 @@ body {
     font-family: $font-regular;
     // font-family: 'Kanit', sans-serif;
     font-weight: normal;
+    overflow-x: hidden;
 }
 
 .clearfix{
