--- a/src/app/regular-list/regular-sell/regular-sell.component.html
+++ b/src/app/regular-list/regular-sell/regular-sell.component.html
@@ -186,14 +186,16 @@
   
             </div>
         </div>
+
+
         <div class="row">
           <div class="col-md-4">
             <span>ระยะเวลาเริ่มต้น</span>
           </div>
           <div class="col-md-3">
             <div class="input-wrapper">
-              <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
-            </div>
+                <input class=" textinput dateinput bg-gray" [(ngModel)]="model.startDate" ngbDatepicker #d1="ngbDatepicker" id="startDate" placeholder="วว/ดด/ปปปป" name="startDate" type="text" (click)="d1.toggle()">
+              </div>
           </div>
         </div>
         <div class="row">
@@ -202,7 +204,7 @@
           </div>
           <div class="col-md-3">
             <div class="input-wrapper">
-              <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
+              <input class=" textinput dateinput bg-gray" [(ngModel)]="model.endDate" ngbDatepicker #d2="ngbDatepicker" id="endDate" placeholder="วว/ดด/ปปปป" name="endDate" type="text" (click)="d2.toggle()">
             </div>
           </div>
         </div>
