--- a/src/app/transaction/purchase/purchase.component.html
+++ b/src/app/transaction/purchase/purchase.component.html
@@ -25,7 +25,7 @@
         </div>
         <div class="col-md-3">
 
-          <p>เลขที่ผู้ถือหน่วยลงทุน</p>
+          <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
 
           <div class="select-wrapper inline-block">
             <select name="ddlLink" id="ddlLink">
@@ -36,11 +36,11 @@
           </div>
         </div>
         <div class="col-md-3">
-          <p>ชื่อผู้ถือหน่วยลงทุน</p>
+          <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
           <span>เนติวัฒน์ โชติกร</span>
         </div>
         <div class="col-md-6">
-            <p>ที่อยู่</p>
+            <p>{{ 'CONTENT.address' | translate }}</p>
           <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
           </div>
       </div>
@@ -130,7 +130,7 @@
           </div>
           <div class="col-md-3">
             <div class="input-wrapper">
-              <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
+              <input class=" textinput dateinput bg-gray" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text" (click)="d.toggle()">
             </div>
           </div>
         </div>
@@ -908,14 +908,14 @@
 						<!-- <button type="button" class="btn-med btn-secondary" data-dismiss="modal">Cancel</button> -->
 						<!-- <button type="button" class="btn-med btn-primary" data-dismiss="modal" (click)="checkpage('signin')">ยอมรับ</button> -->
 						<div class="row justify-content-center">
-							<div class="col-sm-6 col-md-4">
+							<div class="col-xs-6 col-md-4">
 								<button class="btn-med btn-primary" (click)="dialog=false" routerLink="/profile/suitability">
 									<p style="margin-top: 7px;">ตกลง
 										<i class="fa fa-angle-right" aria-hidden="true"></i>
 									</p>
 								</button>
               </div>
-              <div class="col-sm-6 col-md-4">
+              <div class="col-xs-6 col-md-4">
 								<button class="btn-med btn-cancel" (click)="checkpage('purchase')">
 									<p style="margin-top: 7px;">ยกเลิก
 										<i class="fa fa-angle-right" aria-hidden="true"></i>
