--- a/src/assets/Content/default/sass/components/_mod-canvas-menu.scss
+++ b/src/assets/Content/default/sass/components/_mod-canvas-menu.scss
@@ -44,14 +44,16 @@ html,body{
   &.expanded{
     position: fixed;
     visibility: visible;
-    right: $offcanvas-width;
+    right: 0;
+    //right: $offcanvas-width;
     transition: all 0.3s linear;
-    @include opacity-bg($color-white,0.5);
+    //@include opacity-bg($color-white,0.5);
+    background: rgba(0, 0, 0, 0.5);
   }
-  &:hover{
-    @include opacity-bg($color-white,0.1);
-    transition: all 0.3s linear;
-  }
+  // &:hover{
+  //   @include opacity-bg($color-white,0.1);
+  //   transition: all 0.3s linear;
+  // }
 }
 
 #canvas-menu-section{
@@ -805,27 +807,205 @@ html,body{
         }
 
     .canvas-menu {
-        background-color: rgba(0, 0, 0, 0.95);
+        background-color: rgba(255, 255, 255, 1);
         display: block;
         height: 100%;
-        overflow: auto;
+        // overflow: auto;
         position: fixed;
         right: -100%;
         font-size: 15px;
         top: 0;
-        width: 100%;
+        width: 85%;
         z-index: 2000;
         transition: right 0.5s ease-in-out 0s;
         -webkit-transition: right 0.5s ease-in-out 0s;
         -moz-transition: right 0.5s ease-in-out 0s;
         -o-transition: right 0.5s ease-in-out 0s;
+        .top-menu-wrapper {
+          display: block;
+          width: 100%;
+          height: auto;
+          padding: 0;
+          margin: 0;
+          background-color: $color-primary;
+  
+          .wrapper {
+              // max-width: 1280px;
+              margin: 0 auto;
+          }
+  
+          .top-main-nav {
+              text-align: left;
+  
+              ul {
+                  list-style: none;
+                  padding: 0;
+                  margin: 0;
+  
+                  li {
+                      position: relative;
+                      display: inline-block;
+                      padding: 10px 0;
+                      margin: 0 5px;
+                      -webkit-transition: all 0.2s;
+                      -moz-transition: all 0.2s;
+                      -ms-transition: all 0.2s;
+                      -o-transition: all 0.2s;
+                      transition: all 0.2s;
+  
+                      a {
+                          font-size: $text-content;
+                          line-height: $text-small;
+                          color: $color-white;
+  
+                          &:hover {
+                              color: $color-hover;
+                              text-decoration: none;
+                          }
+                      }
+  
+                      &:hover {
+                          ul {
+                              display: block;
+                              opacity: 1;
+                              visibility: visible;
+                          }
+                      }
+  
+                      &.current {
+                          a {
+                              color: $color-hover;
+  
+                              &:hover {
+                                  color: $color-hover;
+                                  text-decoration: none;
+                              }
+                          }
+                      }
+  
+                      ul {
+                          padding: 0;
+                          position: absolute;
+                          top: 100%;
+                          left: 0;
+                          min-width: 240px;
+                          -webkit-box-shadow: none;
+                          -moz-box-shadow: none;
+                          box-shadow: none;
+                          display: none;
+                          opacity: 0;
+                          visibility: hidden;
+                          -webkit-transiton: opacity 0.2s;
+                          -moz-transition: opacity 0.2s;
+                          -ms-transition: opacity 0.2s;
+                          -o-transition: opacity 0.2s;
+                          -transition: opacity 0.2s;
+                          z-index: 99;
+  
+                          li {
+                              display: block;
+                              padding: 10px;
+                              margin: 0;
+                              color: $color-white;
+                              background-color: $color-primary;
+  
+                              a {
+                                  display: block;
+                                  font-size: $text-content;
+                                  line-height: $text-content;
+                                  color: $color-white;
+  
+                                  &:hover {
+                                      color: $color-hover;
+                                      text-decoration: none;
+                                  }
+                              }
+  
+                              &:hover {
+                                  color: $color-hover;
+                                  background-color: $color-primary;
+  
+                                  a {
+                                      color: $color-hover;
+                                  }
+                              }
+                          }
+                      }
+                  }
+              }
+          }
+  
+          .top-social-nav {
+              text-align: right;
+              padding-right: 25px;
+  
+              ul {
+                  display: inline-block;
+                  list-style: none;
+                  padding: 0;
+                  margin: 0;
+  
+                  li {
+                      display: inline-block;
+                      padding: 10px 0;
+                      margin: 0 5px;
+                      cursor: pointer;
+  
+                      a {
+                          font-size: $text-content;
+                          line-height: $text-small;
+                          color: $color-white;
+  
+                          &:hover {
+                              color: $color-hover;
+                              text-decoration: none;
+                          }
+                      }
+  
+                      &.current {
+                          a {
+                              color: $color-hover;
+  
+                              &:hover {
+                                  color: $color-hover;
+                                  text-decoration: none;
+                              }
+                          }
+                      }
+                      img{
+                          height: 15px;
+                          vertical-align: initial;
+                      }
+                  }
+              }
+  
+              @media screen and (max-width: $screen-sm-max) {
+                  text-align: left;
+  
+  
+                  ul {
+                      float: left;
+  
+                      &.sw-lang {
+                          float: right;
+                      }
+                  }
+              }
+          }
+  
+          @media screen and (max-width: $screen-md-max) {
+              .wrapper {
+                  padding: 0 10px;
+              }
+          }
+      }
 
         .main-menu {
-            padding-top: 12px;
+            // padding-top: 12px;
             list-style: none;
 
             li {
-                border-bottom: 1px solid #323949;
+                border-bottom: 1px solid $color-secondary;
                 /*margin-left: 10px;
                 margin-right: 10px;*/
                 padding: 12px 20px;
@@ -840,14 +1020,14 @@ html,body{
                     font-size: $text-small;
                     line-height: 1em;
                     text-transform: uppercase;
-                    color: $color-white;
+                    color: $color-primary;
 
                     &:hover {
-                        color: $color-white;
+                        color: $color-primary;
                         text-decoration: none;
 
                         .caret {
-                            border-top-color: $color-white;
+                            border-top-color: $color-primary;
                         }
                     }
 
