--- a/src/assets/Content/default/sass/content/login.scss
+++ b/src/assets/Content/default/sass/content/login.scss
@@ -21,7 +21,7 @@
 
     @media screen and (max-width: 767px){
         background-image: url("/assets/Images/banners/banner-login-m.png");
-        background-size: 100% auto;
+        // background-size: 100% auto;
     }  
 }
 .copyright {
@@ -123,8 +123,8 @@
     
         @media screen and (max-width: 767px){    
             img{   
-            width: 28px !important; 
-            height: 28px !important;  
+            // width: 28px !important; 
+            // height: 28px !important;  
             }       
         }
     
@@ -255,6 +255,7 @@
                 display: inline-block;
                 // padding: 10px 0;
                 margin: 0 5px;
+                cursor: pointer;
 
                 a {
                     font-size: $text-content;
